# local-directory-scraper

./: .gcloudignore  .gitignore  README.md  pyproject.toml  start.sh
client/: .env  .gitignore  index.html  package-lock.json  package.json  testData.js
client/.firebase/: hosting.ZGlzdA.cache
client/src/: App.jsx  CSVTable.jsx  Description.jsx  Error.jsx  Loader.jsx  MainComponents.jsx  SearchComponent.jsx  SearchResult.jsx  SelectRegion.jsx  SelectSubcategories.jsx  SelectionStepOne.jsx  SelectionStepTwo.jsx  main.jsx
client/src/api/: Description.jsx  Index.jsx  Search.jsx  api_base.js  api_url.js
client/src/hooks/: Loader.jsx  useData.js
client/src/stylesheets/: index.css  reset.css  theme.css  type.css
server/: .gitignore  Dockerfile  app.yaml  deploy.sh  pyproject.toml  requirements.txt  test.csv
server/src/: get_page.py  local-directory-scraping.py  main.py  test.py
server/src/dependencies/: autotagging.py  categories.py  content_reader.py  database.py  endpoint_request.py  helpers.py  make_csv.py  scraper.py
server/src/routes/: csv_file.py  search.py
src/: main.py  read_html.py  scrape.py
src/dependencies/: content_reader.py  helpers.py  html_reader.py  make_csv.py  scraper.py
src/info_extraction/: read_html.py  scrape.py
src/routes/: csv_file.py  search.py
